Fixed responsive issues, fixed spacing issue on desktop version

--- a/stylesheets/carousel.less
+++ b/stylesheets/carousel.less
@@ -36,28 +36,46 @@ list-style: none;
 }
 
 .carousel-control {
-  width:46px;
-  height:109px;
   position: absolute;
   top:40%;
+  @media screen and (min-width: 768px) {
+    width:46px;
+    height:109px;
+  }
+  @media screen and (max-width: 767px) {
+    width:46px * .6;
+    height:109px * .6;
+  }
 }
 
 .carousel-control.left {
   background-image: url("../images/hex-half-left.png");
+  @media screen and (max-width: 767px) {
+    background-size: 46px * .6, 110px * .6;
+  }
 }
 
 .carousel-control.right {
   background-image: url("../images/hex-half-right.png");
+  @media screen and (max-width: 767px) {
+    background-size: 46px * .6, 110px * .6;
+  }
 }
 
 .carousel-control .icon-prev, .carousel-control .icon-next, .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right{
   position:absolute;
-  top:43px;
   left:0;
   right:0;
-  width:46px;
   padding: 0;
   margin: 0;
+  @media screen and (min-width: 768px) {
+    width:46px;
+    top:43px;
+  }
+  @media screen and (max-width: 767px) {
+    width: 20px;
+    top: 22px;
+  }
 }
 
 .carousel-indicators li {
@@ -105,10 +123,15 @@ background-image: url("../images/hex-indicator-active.png");
 }
 
 .caption-background {
-  height:220px;
   left:100%;
   -webkit-transition: 0.5s ease-out;
   transition: 0.5s ease-out;
+  @media screen and (min-width: 768px) {
+    height:220px;
+  }
+  @media screen and (max-width: 767px) {
+    height:150px;
+  }
 }
 
 .caption-active {
@@ -122,29 +145,39 @@ background-image: url("../images/hex-indicator-active.png");
 
 
 h1 {
-  font-size: 42px;
+  @media screen and (min-width: 768px) {
+    font-size: 42px;
+  }
+  @media screen and (max-width: 767px) {
+    font-size: 22px;
+  }
 }
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 768px) {
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
+.carousel-caption p {
+  @media screen and (min-width: 768px) {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.4;
   }
+  @media screen and (max-width: 767px) {
+    margin-bottom: 10px;
+    font-size: 10px;
+    line-height: 1.2;
+  }
+}
+
+.carousel-caption .btn {
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  }
+  @media screen and (max-width: 767px) {
+    font-size: 10px;
+  }
+}
 
   .featurette-heading {
     font-size: 50px;
   }
-
-}
-
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
-}
